--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -9,7 +9,7 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 [/Script/AkAudio.AkSettings]
 MaxSimultaneousReverbVolumes=4
 WwiseProjectPath=(FilePath="TEST_Wwise_WwiseProject/TEST_Wwise_WwiseProject.wproj")
-RootOutputPath=(Path="")
+RootOutputPath=(Path="../TEST_Wwise_WwiseProject/GeneratedSoundBanks")
 WwiseStagingDirectory=(Path="WwiseAudio")
 bSoundBanksTransfered=True
 bAssetsMigrated=True
@@ -36,8 +36,8 @@ SplitMediaPerFolder=False
 UseEventBasedPackaging=False
 UnrealCultureToWwiseCulture=(("en", "English(US)"))
 DefaultAssetCreationPath=/Game/WwiseAudio
-InitBank=None
-AudioRouting=Custom
+InitBank=/Game/WwiseAudio/InitBank.InitBank
+AudioRouting=EnableWwiseOnly
 bWwiseSoundEngineEnabled=True
 bWwiseAudioLinkEnabled=False
 bAkAudioMixerEnabled=False
